# rust-warp-api

./: Cargo.toml  README.md
data/: test.parquet
src/: handler.rs  main.rs  model.rs  response.rs  utils.rs
src/handlers/: column_handlers.rs  row_handlers.rs
src/models/: mod.rs
tmp-deltatable/: part-00000-730f08c7-7089-4980-a962-2b4d8789aaa5-c000.snappy.parquet
