[package]
name = "rust-warp-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
polars = { version = "0.32.1", features = ["parquet", "serde"] }
polars-core = "0.32.1"
polars-io = "0.32.1"
serde = "1.0.185"
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
warp = "0.3.5"
